всі секції main та футер

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <body>
     <!-- HEADER -->
-    <header class="header">
+    <!-- <header class="header">
       <div class="header__container">
         <nav class="nav">
           <a href="./index.html" class="logo"
@@ -55,7 +55,7 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
     <!-- MAIN -->
     <main>
       <!-- HERO -->
@@ -71,8 +71,8 @@
       <section class="special">
         <div class="container">
           <h2 class="visually-hidden">Особливості</h2>
-          <ul class="special__list">
-            <li class="special__item">
+          <ul class="special__list card__set">
+            <li class="special__item card__set--item">
               <div class="special__box">
                 <svg class="special__icon" width="70" height="70">
                   <use href="./images/icons.svg#icon-antenna"></use>
@@ -84,7 +84,7 @@
                 формування позиції.
               </p>
             </li>
-            <li class="special__item">
+            <li class="special__item card__set--item">
               <div class="special__box">
                 <svg class="special__icon" width="70" height="70">
                   <use href="./images/icons.svg#icon-clock"></use>
@@ -96,7 +96,7 @@
                 тягне у себе.
               </p>
             </li>
-            <li class="special__item">
+            <li class="special__item card__set--item">
               <div class="special__box">
                 <svg class="special__icon" width="70" height="70">
                   <use href="./images/icons.svg#icon-diagram"></use>
@@ -107,7 +107,7 @@
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li class="special__item">
+            <li class="special__item card__set--item">
               <div class="special__box">
                 <svg class="special__icon" width="70" height="70">
                   <use href="./images/icons.svg#icon-astronaut"></use>
@@ -167,8 +167,8 @@
       <section class="team">
         <div class="container">
           <h2 class="team__title">Наша команда</h2>
-          <ul class="team__list">
-            <li class="team__item">
+          <ul class="team__list card__set">
+            <li class="team__item card__set--item">
               <img
                 src="./images/igor.jpg"
                 alt="photo-igor"
@@ -229,7 +229,7 @@
                 </ul>
               </div>
             </li>
-            <li class="team__item">
+            <li class="team__item card__set--item">
               <img
                 src="./images/olga.jpg"
                 alt="photo-olga"
@@ -290,7 +290,7 @@
                 </ul>
               </div>
             </li>
-            <li class="team__item">
+            <li class="team__item card__set--item">
               <img
                 src="./images/mykola.jpg"
                 alt="photo-mykola"
@@ -352,7 +352,7 @@
                 </ul>
               </div>
             </li>
-            <li class="team__item">
+            <li class="team__item card__set--item">
               <img
                 src="./images/mykhailo.jpg"
                 alt="photo-mykhailo"
@@ -421,8 +421,8 @@
       <section class="clients">
         <div class="container">
           <h2 class="clients__title">Постійні клієнти</h2>
-          <ul class="clients__list">
-            <li class="clients__item">
+          <ul class="clients__list card__set">
+            <li class="clients__item card__set--item">
               <a
                 class="clients__link"
                 href="#"
@@ -434,7 +434,7 @@
                 </svg>
               </a>
             </li>
-            <li class="clients__item">
+            <li class="clients__item card__set--item">
               <a
                 class="clients__link"
                 href="#"
@@ -445,7 +445,7 @@
                 </svg>
               </a>
             </li>
-            <li class="clients__item">
+            <li class="clients__item card__set--item">
               <a
                 class="clients__link"
                 href="#"
@@ -592,9 +592,9 @@
           </form>
         </div>
       </div>
-    </footer>
-    <!-- MODAL WINDOW -->
-<div class="backdrop backdrop--is-hidden" data-modal>
+    </footer> -->
+    <!-- MODAL WINDOW
+<!-- <div class="backdrop backdrop--is-hidden" data-modal>
   <div class="modal">
     <button class="modal__btn" data-modal-close>
       <svg width="18px" height="18px">
@@ -640,7 +640,7 @@
         <button class="modal-form__button" type="submit">Відправити</button>
       </form>
   </div>
-</div>
+</div> -->
 <script src="./js/modal.js"></script>
   </body>
 </html>
