--- a/portfolio.html
+++ b/portfolio.html
@@ -33,10 +33,10 @@
         <nav class="nav">  
           <ul class="nav__list">
             <li class="nav__item">
-              <a class="nav__link nav__link--current" href="./index.html">Студія</a>
+              <a class="nav__link " href="./index.html">Студія</a>
             </li>
             <li class="nav__item">
-              <a class="nav__link" href="./portfolio.html"
+              <a class="nav__link nav__link--current" href="./portfolio.html"
                 >Портфоліо</a
               >
             </li class="nav__item">
