--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <main>
       <!-- HERO -->
       <section class="hero">
-        <div>
+        <div class="hero__container">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button class="hero__button" type="button" data-modal-open>
             Замовити послугу
@@ -77,7 +77,7 @@
       </section>
       <!-- SPECIALS -->
       <section class="special">
-        <div>
+        <div class="special__container">
           <h2 class="visually-hidden">Особливості</h2>
           <ul class="special__list card__set">
             <li class="special__item card__set--item">
@@ -132,7 +132,7 @@
       </section>
       <!-- WHAT -->
       <section class="what">
-        <div>
+        <div class="what-container">
           <h2 class="what__title">Чим ми займаємося</h2>
           <ul class="what__list">
             <li class="what__item">
@@ -179,7 +179,7 @@
       </section>
       <!-- TEAM -->
       <section class="team">
-        <div>
+        <div class="team__container">
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list card__set">
             <li class="team__item card__set--item">
@@ -505,7 +505,7 @@
       </section>
       <!-- Postiyni Clienty -->
       <section class="clients">
-        <div>
+        <div class="clients__container">
           <h2 class="clients__title">Постійні клієнти</h2>
           <ul class="clients__list card__set">
             <li class="clients__item card__set--item">
