--- a/index.html
+++ b/index.html
@@ -749,12 +749,15 @@
     <li class="menu-social__item"><a class="menu-social__link" href="https://www.instagram.com/"
       target="_blank"
       rel="noopener noreferrer">Instagram</a></li>
+    <li class="menu-social__items"></li>
     <li class="menu-social__item"><a class="menu-social__link" href="https://twitter.com/"
       target="_blank"
       rel="noopener noreferrer">Twitter</a></li>
+      <li class="menu-social__items"></li>
     <li class="menu-social__item"><a class="menu-social__link" href="https://www.facebook.com/"
       target="_blank"
       rel="noopener noreferrer">Facebook</a></li>
+      <li class="menu-social__items"></li>
     <li class="menu-social__item"><a class="menu-social__link" href="https://www.linkedin.com/"
       target="_blank"
       rel="noopener noreferrer">LinkedIn</a></li>
