--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.min.css">
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
@@ -133,7 +134,7 @@
       <!-- WHAT -->
       <section class="what">
         <div class="what-container">
-          <h2 class="what__title">Чим ми займаємося</h2>
+          <h2 data-aos="zoom-in-down" class="what__title">Чим ми займаємося</h2>
           <ul class="what__list">
             <li class="what__item">
               <img
@@ -180,7 +181,7 @@
       <!-- TEAM -->
       <section class="team">
         <div class="team__container">
-          <h2 class="team__title">Наша команда</h2>
+          <h2 data-aos="zoom-in-down" class="team__title">Наша команда</h2>
           <ul class="team__list card__set">
             <li class="team__item card__set--item">
               <picture>
@@ -506,7 +507,7 @@
       <!-- Postiyni Clienty -->
       <section class="clients">
         <div class="clients__container">
-          <h2 class="clients__title">Постійні клієнти</h2>
+          <h2 data-aos="zoom-in-down" class="clients__title">Постійні клієнти</h2>
           <ul class="clients__list card__set">
             <li class="clients__item card__set--item">
               <a
@@ -771,6 +772,10 @@
       integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <script defer src="./js/mobile-menu.js"></script>
   </body>
 </html>
