додав кнопку вгору

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.min.css">
     <link rel="stylesheet" href="./css/styles.css" />
+    <script src="https://kit.fontawesome.com/decae75c7d.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -764,7 +765,7 @@
       rel="noopener noreferrer">LinkedIn</a></li>
   </ul>
 </div>
-
+<a class="up__button" href="#"><i class="up__arrow fa-regular fa-circle-up"></i></a>
 <script src="./js/modal.js"></script>
 <script
       defer
@@ -777,5 +778,7 @@
       AOS.init();
     </script>
     <script defer src="./js/mobile-menu.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
+   <script src="./js/up-button.js"></script>
   </body>
 </html>
