--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.min.css">
     <link rel="stylesheet" href="./css/styles.css" />
-    <script src="https://kit.fontawesome.com/decae75c7d.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -765,7 +764,9 @@
       rel="noopener noreferrer">LinkedIn</a></li>
   </ul>
 </div>
-<a class="up__button" href="#"><i class="up__arrow fa-regular fa-circle-up"></i></a>
+<a class="up__button" href="#"><svg class="up__arrow">
+  <use href="./images/icons.svg#icon-up"></use>
+</svg></a>
 <script src="./js/modal.js"></script>
 <script
       defer
